--- a/index.css
+++ b/index.css
@@ -50,6 +50,13 @@
   }
 }
 
+.desktop-med-spacer {
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 200px;
+  }
+
+}
+
 .desktop-small-spacer {
   @media screen and (min-width: 1200px) {
     margin-bottom: 88px;
@@ -70,7 +77,7 @@
 }
 
 section {
-  height: 100%;
+  margin-bottom: 50px;
 }
 
 body {
@@ -86,6 +93,8 @@ body {
   @media screen and (min-width: 1200px) {
     max-width: 1366px;
     margin-top: 0;
+  padding: 0 20px;
+
   }
 }
 
@@ -284,7 +293,6 @@ body {
 
 .title-name-wrapper {
   margin: 0 auto;
-  margin-bottom: 112px;
   margin-left: 20px;
   text-align: left;
   @media screen and (min-width: 1200px) {
@@ -303,15 +311,16 @@ body {
 
 .image-wrapper-1 {
   position: relative;
-  margin-bottom: 71px;
+  margin-top: 118px;
   @media screen and (min-width: 1200px) {
-    margin-bottom: 55px;
+  margin-top: 0px;
+  margin-bottom: 50px;
   }
 }
 
 .icon-top {
   position: absolute;
-  top: -98px;
+  top: -98px; /* Выступ вверх */
 }
 
 .small-icon {
@@ -354,22 +363,33 @@ body {
 
 .text-right {
   @media screen and (min-width: 1200px) {
-    width: 44%;
+    text-align: left;
+    width: 40%;
     margin-left: auto;
     margin-bottom: 45px;
   }
 }
 
+.text-right-big {
+  @media screen and (min-width: 1200px) {
+    margin-left: auto;
+    width: 40%;
+    font-size: 30px;
+  }
+    
+}
+
 .image-1-bottom-side {
-  position: absolute;
+  transform: translate(0, -50%);
   background-color: #a8dadb;
   width: 357px;
-  bottom: -50px;
   border-top-right-radius: 50px;
   border-bottom-right-radius: 50px;
   padding: 20px;
 
   @media screen and (min-width: 1200px) {
+    transform: none;
+    position: absolute;
     border-top-right-radius: 250px;
     border-bottom-right-radius: 250px;
     top: 0;
@@ -452,12 +472,12 @@ body {
 }
 
 .top-right-radius-block {
-  position: absolute;
+  transform: translate();
   background-color: #a8dadb;
   width: 357px;
   border-top-right-radius: 50px;
   padding: 20px;
-  bottom: 100%;
+  
   @media screen and (min-width: 1200px) {
     width: 490px;
     border-top-left-radius: 100%;
@@ -490,9 +510,10 @@ body {
 }
 
 .victoriya-second-bottom-side {
-  position: absolute;
-  bottom: -103px;
+  transform: translate(0, -35%);
   @media screen and (min-width: 1200px) {
+    transform: none;
+    position: absolute;
     bottom: -290px;
     right: 0;
   }
